# kpm-build

./: CMakeLists.txt
.github/workflows/: build.yml
kpms/anti-detect/: CMakeLists.txt  anti-detect-supercall.c  anti-detect.c
kpms/common/: CMakeLists.txt  kpm_demo_helpers.h
kpms/demo-hello/: CMakeLists.txt  hello.c
kpms/demo-inlinehook/: CMakeLists.txt  inlinehook.c
kpms/demo-syscallhook/: CMakeLists.txt  syscallhook.c
kpms/hide-maps/: .Makefile.swp  CMakeLists.txt  hidemaps.c
kpms/recompile/: CMakeLists.txt  recompile.h  recompile_client.c  recompile_export_test.c  recompile_fork_test.c  recompile_full_test.sh  recompile_internal.h  recompile_realworld_test.sh  recompile_test.c
kpms/recompile/core/: capabilities.c  runtime.c
kpms/recompile/fork_guard/: guard.c
kpms/recompile/module/: dynamic_probe.c  module.c  symbol_table.h
kpms/recompile/pc_guard/: export_guard.c
kpms/wxshadow/: CHANGELOG.md  CMakeLists.txt  README.md  wxshadow.c  wxshadow.h  wxshadow_bp.c  wxshadow_client.c  wxshadow_internal.h  wxshadow_scan.c
